--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.2.3",
+    "chalk": "^2.3.2",
     "history": "^4.7.2",
     "moment": "^2.21.0",
     "react": "^16.2.0",
