--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ansi-regex": "^3.0.0",
     "antd": "^3.2.3",
     "chalk": "^2.3.2",
     "history": "^4.7.2",
