--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ansi-regex": "^3.0.0",
     "antd": "^3.2.3",
     "chalk": "^2.3.2",
+    "has-ansi": "^3.0.0",
     "history": "^4.7.2",
     "moment": "^2.21.0",
     "react": "^16.2.0",
