--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "source-map": "^0.7.2",
     "strip-ansi": "^4.0.0",
     "underscore": "^1.8.3"
   },
