--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chalk": "^2.3.2",
     "has-ansi": "^3.0.0",
     "history": "^4.7.2",
+    "json5": "^1.0.1",
     "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
