--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "has-ansi": "^3.0.0",
     "history": "^4.7.2",
     "json5": "^1.0.1",
+    "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
