--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ansi-regex": "^3.0.0",
     "antd": "^3.2.3",
     "chalk": "^2.3.2",
+    "graceful-fs": "^4.1.11",
     "has-ansi": "^3.0.0",
     "history": "^4.7.2",
     "json5": "^1.0.1",
