--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graceful-fs": "^4.1.11",
     "has-ansi": "^3.0.0",
     "history": "^4.7.2",
+    "is-buffer": "^2.0.2",
     "json5": "^1.0.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
