--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json5": "^1.0.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
+    "randomatic": "^3.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
