--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "history": "^4.7.2",
     "is-buffer": "^2.0.2",
     "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.0",
     "is-posix-bracket": "^0.1.1",
     "json5": "^1.0.1",
     "mkdirp": "^0.5.1",
