--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "json5": "^1.0.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
+    "object.omit": "^3.0.0",
     "preserve": "^0.2.0",
     "randomatic": "^3.0.0",
     "react": "^16.2.0",
