--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "has-ansi": "^3.0.0",
     "history": "^4.7.2",
     "is-buffer": "^2.0.2",
+    "is-extendable": "^1.0.1",
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.0",
     "is-posix-bracket": "^0.1.1",
