--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "regex-cache": "^0.4.4",
     "source-map": "^0.7.2",
     "strip-ansi": "^4.0.0",
     "underscore": "^1.8.3"
