--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.21.0",
     "object.omit": "^3.0.0",
     "parse-glob": "^3.0.4",
+    "path-is-absolute": "^1.0.1",
     "preserve": "^0.2.0",
     "randomatic": "^3.0.0",
     "react": "^16.2.0",
