--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graceful-fs": "^4.1.11",
     "has-ansi": "^3.0.0",
     "history": "^4.7.2",
+    "inherits": "^2.0.3",
     "is-buffer": "^2.0.2",
     "is-extendable": "^1.0.1",
     "is-extglob": "^2.1.1",
