--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "json5": "^1.0.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
+    "object-assign": "^4.1.1",
     "object.omit": "^3.0.0",
     "parse-glob": "^3.0.4",
     "path-is-absolute": "^1.0.1",
