--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "is-glob": "^4.0.0",
     "is-posix-bracket": "^0.1.1",
     "json5": "^1.0.1",
+    "lodash": "^4.17.5",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
     "object-assign": "^4.1.1",
