--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.21.0",
     "object-assign": "^4.1.1",
     "object.omit": "^3.0.0",
+    "os-tmpdir": "^1.0.2",
     "parse-glob": "^3.0.4",
     "path-is-absolute": "^1.0.1",
     "preserve": "^0.2.0",
